src/App.css
:root {
    --navBtn-hue: 200;
    --navBtn-sat: 50%;
    --navBtn-light: 50%;
    --transition-speed: 400ms;
}

html body {
    font-family: 'Open Sans', sans-serif;
    background-color: #F4F4FF;
}

#root {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

.contentContainer {
    text-align: center;
    margin-top: 5.5rem;
    flex: 1;
}

footer {
    margin-left: 10px;
    font-style: italic;
    font-size: smaller;
    height: 25px;
}

.modalPicture {
    max-height: 80vh;
    max-width: 80vw;
    border-radius: 10px;
    object-fit: contain;
    border: 1px solid rgba(0, 0, 0, 0);
    margin-bottom: 1vh;
}

.modalPicture:hover {
    cursor: pointer;
    border: 1px solid #777;
}

.modalText {
    max-width: 75vw;
    margin-top: 0;
}

.mainPicture {
    max-height: 80vh;
    border-radius: 10px;
    object-fit: contain;
    border: 1px solid rgba(0, 0, 0, 0);
    margin-bottom: 1vh;
}

.mainPicture:hover {
    cursor: pointer;
    border: 1px solid #777;
}

.pictureTitle {
    margin-bottom: 2vh;
}

.pictureButton {
    border: 0;
    background-color: rgba(0, 0, 0, 0);
}

.starVideo {
    width: 960px;
    height: 540px;
    margin-bottom: 1vh;
}

.mainText {
    padding: 0 10%;
}

.imageCredit {
    margin-top: 1vh;
    margin-bottom: 1vh;
    font-size: 0.9rem;
    font-style: italic;
}

.navbar-nav.nav-pills .nav-link.active {
    background-color: hsl(var(--navBtn-hue), var(--navBtn-sat), var(--navBtn-light));
}

.navbar-nav.nav-pills .nav-link.active:hover {
    --navBtn-light: 40%
}

.navBtn {
    background-color: hsl(var(--navBtn-hue), var(--navBtn-sat), var(--navBtn-light));
    border-radius: 0.75em;
    border: none;
    color: #F4F4FF;
    cursor: pointer;
    padding: .5em .75em;
    font-size: 1rem;
    font-weight: bold;
}

.navBtn + .navBtn {
    margin-left: .5rem;
}

.navBtn:hover {
    --navBtn-light: 40%
}

.galleryContainer {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 1rem;
    margin: 0 3vw 2vh 3vw;
}

.galleryCard {
    position: relative;
    background: white;
    border-radius: 10px;
    box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, .5);
    overflow: hidden;
    animation: placeholder-animation 1s ease-in-out infinite alternate;
}

.galleryCard:hover {
    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, .5);
    cursor: pointer;
}

.galleryCardPicture {
    visibility: visible;
    width: 100%;
    max-height: 400px;
    aspect-ratio: 4 / 3;
    object-fit: cover;
    object-position: center;
}

.galleryCardPicture.loading {
    visibility: hidden;
}

@keyframes placeholder-animation {
    0% {
        background-color: hsl(200, 20%, 80%);
    }

    100% {
        background-color: hsl(200, 20%, 90%);
    }
}

.placeholderCard:hover {
    cursor:wait;
}

.galleryCardPicture, .galleryCardFooter {
    transition: var(--transition-speed) transform ease-in-out;
}

.galleryCard {
    transition: var(--transition-speed) box-shadow ease-in-out;
}

.galleryCardFooter {
    position: absolute;
    inset: 0;
    padding-bottom: 0.5rem;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    font-size: 1.2rem;
    background-color: rgba(255, 255, 255, .7);
    display: flex;
    justify-content: center;
    align-items: flex-start;
}

.galleryCard:hover > .galleryCardPicture {
    transform: scale(1.025);
}

.galleryCard > .galleryCardFooter {
    transform: translateY(100%);
}

/* On touchscreens the card footer is always visible */
@media (pointer:coarse) {
    .galleryCard > .galleryCardFooter {
        transform: translateY(77%);
    }
}

/* The card footer has 2 row heigth on every card size */
.galleryCard:hover > .galleryCardFooter {
    transform: translateY(calc(92% - 2em));
}

.modalBackground {
    width: 100vw;
    height: 100vh;
    top: 0;
    background-color: rgba(200, 200, 200, 0.7);
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
}

.modalContainer {
    overflow: auto;
    margin-top: 8vh;
    max-width: 95%;
    max-height: 85vh;
    border-radius: 12px;
    background-color: rgba(255, 255, 255, 0.85);
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    display: flex;
    flex-direction: column;
    padding: 20px;
}

.modalTitle {
    display: flex;
    justify-content:space-between;
    align-items: center;
}

.closingXButton {
    background-color: transparent;
    border: none;
    font-size: 25px;
    cursor: pointer;
}

.closingXButton:hover {
    color: #777;
}

.explanation {
    margin-top: 0;
}

.modalContainer .body {
    flex: 30%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 1.1rem;
    text-align: center;
}

.modalContainer .footer {
    display: flex;
    justify-content: center;
    align-items: center;
}

.aboutContainer {
    border: 1em solid hsl(var(--navBtn-hue), var(--navBtn-sat), var(--navBtn-light));
    border-radius: 25px;
    box-shadow: rgba(0, 0, 0, 0.35) -5px 5px 15px;
    padding: 3% 5%;
    margin: 4vh 6% 4vh 6%;
    display: flex;
}

.aboutTextContainer {
    text-align: justify;
    font-size: 1.3em;
    margin-left: 5vw;
}

@keyframes astronautMove {
    50% {transform: rotate(10deg);}
  }

.aboutImage {
    width: 25vw;
    object-fit: scale-down;
    animation: astronautMove 10s infinite;
}

.errorPage {
    margin-top: 7vh;
    display: flex;
    justify-content: center;
}

.errorContainer {
    border: 1em solid hsl(var(--navBtn-hue), var(--navBtn-sat), var(--navBtn-light));
    border-radius: 25px;
    box-shadow: rgba(0, 0, 0, 0.35) -5px 5px 15px;
    padding: 3%;
    width: 50vw;
    display: flex;
    flex-direction: column;
    gap: 1vh;
    align-items: center;
    justify-content: center;
}

@media only screen and (max-width: 992px) {
    .errorContainer {
      width: 80vw;
    }

    .aboutContainer {
        flex-direction: column;
    }

    .aboutImage {
        height: 40vh;
        width: auto;
    }

    .aboutTextContainer {
        margin-left: 0;
    }

    .mainPicture {
        width: 90vw;
    }

    .aboutContainer {
        margin-top: 2vh;
    }

    .errorContainer  .errorImage {
        width: 50vw;
    }
}

@media only screen and (max-width: 385px){
    .navbar .navbar-brand {
        font-size: 1rem;
    }
}

.errorImage {
    width: 22vw;
    animation: astronautMove 10s infinite;
}

.spinnerContainer {
    display: inline-block;
}

.spinner {
    display: flex;
    flex-direction: row;
    gap: 5px;
  }
  
  .spinner > div {
    width: 18px;
    height: 18px;
    background-color: hsl(var(--navBtn-hue), var(--navBtn-sat), var(--navBtn-light));
    border-radius: 100%;
    display: inline-block;
    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
  }
  
  .spinner .bounce1 {
    -webkit-animation-delay: -0.32s;
    animation-delay: -0.32s;
  }
  
  .spinner .bounce2 {
    -webkit-animation-delay: -0.16s;
    animation-delay: -0.16s;
  }
  
  @-webkit-keyframes sk-bouncedelay {
    0%, 80%, 100% { -webkit-transform: scale(0) }
    40% { -webkit-transform: scale(1.0) }
  }
  
  @keyframes sk-bouncedelay {
    0%, 80%, 100% { 
      -webkit-transform: scale(0);
      transform: scale(0);
    } 40% { 
      -webkit-transform: scale(1.0);
      transform: scale(1.0);
    }
  }

